added login functionality js

--- a/src/views/pages/login.pug
+++ b/src/views/pages/login.pug
@@ -20,7 +20,7 @@ block content
                                     +toggleBtn({text: 'Запомнить меня', id: 'rememberMe'})
                                     a(href = '/cathalog.html') Забыли пароль?
                             .login_content_form_innerContent_auth_button
-                                +stdBtn({text: 'Войти', cls: 'primary', color: 'authBtn', textAlign: 'center'})
+                                +stdBtn({text: 'Войти', cls: 'primary', color: 'authBtn', textAlign: 'center', id: 'loginBtn'})
                             .login_content_form_innerContent_auth_createAcc
                                 span= 'Ещё нет аккаунта? '
                                 a(href = '/register.html') Создайте аккаунт
