added pagination functionality js

--- a/src/views/pages/newslist.pug
+++ b/src/views/pages/newslist.pug
@@ -38,7 +38,7 @@ block content
                     
 
                 .newslist_content_innerContainer_pagination
-                    ul(id='paginaton')
+                    ul(id='pagination')
                         li 1
                         li 2
                         li 3
