--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -184,7 +184,7 @@ body {
             gap: 15px;
             margin-bottom: 20px;
             display: none;
-            
+
             &.fine {
               display: none;
             }
@@ -685,6 +685,11 @@ body {
               @include noSelect;
               @include fontStd(#686868, 18px, 400, 22px);
 
+              &.--active {
+                @include fontStd(black, 18px, 700, 22px);
+              margin-bottom: -2px;
+              border-bottom: 2px solid #FFD54F;
+              }
               &:active {
                   @include fontStd(black, 18px, 700, 22px);
               margin-bottom: -2px;
