--- a/src/components/components.scss
+++ b/src/components/components.scss
@@ -1325,6 +1325,9 @@
     border-radius: 10px;
     filter: drop-shadow(0px 20px 40px rgba(135, 124, 202, 0.15));
     z-index: 10;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 
     &_top {
         margin-bottom: 30px;
@@ -1345,6 +1348,10 @@
         gap: 15px;
         margin-left: 20px;
         margin-right: 20px;
+        min-height: 165px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
         &_title {
             @include fontStd(#1E2123, 16px, 700, 19px);
         }
@@ -1362,9 +1369,11 @@
     &_bottom {
         margin-left: 20px;
         margin-right: 20px;
+        margin-bottom: 25px;
         display: flex;
         justify-content: space-between;
         align-items: center;
+
         &_date {
             width: 125px;
             height: 37px;
