Added input states

--- a/src/components/buttons/buttons.pug
+++ b/src/components/buttons/buttons.pug
@@ -95,6 +95,7 @@ mixin menuBtn(vars, menuElms=[{text: '1 elm'}, {text: '2 elm'}, {text: '3 elm'},
             iconPlace: vars.iconPlace, 
             iconColor: vars.text,
             buttonPlace: vars.buttonPlace,
+            id: vars.id
             })
         case vars.menuType
             when 'list'
