--- a/src/components/searchBlock/searchBlockCathalogFilterComponent.pug
+++ b/src/components/searchBlock/searchBlockCathalogFilterComponent.pug
@@ -8,7 +8,7 @@ include ../content/content.pug
                 .content_container_searchBlockCathalogFilterContainer_innerContainer_top_item
                     span Комнаты
                     .content_container_searchBlockCathalogFilterContainer_innerContainer_top_item_buttons
-                        +menuBtn({text: 'Выберите', cls:'primary', color: 'menu', type: 'w5', gap: '3.5px', icon: 'arrowDown', iconPlace: 'right', iconColor: 'purple', width: '150px', menuType: 'list'},
+                        +menuBtn({text: 'Выберите', cls:'primary', color: 'menu', type: 'w5', gap: '3.5px', icon: 'arrowDown', iconPlace: 'right', iconColor: 'purple', width: '150px', menuType: 'list', id: 'city_input'},
                                 [{text: '1 комн.'}, {text: '2 комн.'}, {text: '3 комн.'}, {text: '4 комн.'}, {text: '5 комн.'},])
                 hr(class = 'first')
                 .content_container_searchBlockCathalogFilterContainer_innerContainer_top_item
