--- a/src/components/rentsBlock/rentTypesCardsBlock.pug
+++ b/src/components/rentsBlock/rentTypesCardsBlock.pug
@@ -89,7 +89,7 @@ include ../spaceContainer.pug
                     .rentTypesCardsBlock_buttonList_item_button_number 110
 
             .rentTypesCardsBlock_buttonList_item_button
-                +textSelection({text: 'Еще', icon: 'arrow'})
+                +textSelection({text: 'Еще', icon: 'arrow', id: 'rent_types_button'})
                 
                 
         .rentTypesCardsBlock_buttonList_item
