--- a/src/views/pages/index.pug
+++ b/src/views/pages/index.pug
@@ -8,6 +8,7 @@ block content
   .content(id = 'indexPage')
     .content_container
           include ../../components/searchBlock/searchBlockComponent.pug
+          include ../../components/map/mapComponent.pug
           include ../../components/rentsBlock/rentTypesCardsBlock.pug
           include ../../components/rentsBlock/rentRoomsCardsBlock.pug
           include ../../components/servicesBlock/servicesBlockComponent.pug
