--- a/src/components/components.scss
+++ b/src/components/components.scss
@@ -207,7 +207,7 @@
             display: flex;
             flex-direction: column;
             justify-content: center;
-            align-items: center;
+            align-items: flex-start;
             gap: 10px;
             width: 150px;
         }
