--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -2,8 +2,9 @@ include ../buttons/buttons.pug
 footer#footer
     .footer_innerContainer
         .footer_leftContainter
-            img(src='../../assets/images/logo.png')
-            .footer_leftContainter_logoUnderText СДАЁМ БАЙ
+            .footer_leftContainter_logo
+                img(src='../../assets/images/logo.png')
+                .footer_leftContainter_logoUnderText СДАЁМ БАЙ
             .footer_leftContainter_contactText ИП Шушкевич Андрей Викторович <br> УНП 192602485 Минским горисполкомом <br> 10.02.2016 <br> 220068, РБ, г. Минск, ул. Осипенко, 21, кв.23 <br> +375 29 621 48 33, sdaem@sdaem.by <br> Режим работы: 08:00-22:00
         
         .footer_middleContainer
@@ -11,47 +12,71 @@ footer#footer
             .footer_middleContainer_Buttons
 
                 .footer_middleContainer_Buttons_leftButtons
-
-                    .footer_middleContainer_Buttons_Button_Title Коттетжи и усадьбы
-                    .footer_middleContainer_Buttons_Button_Title Бани и сауны
-                    .footer_middleContainer_Buttons_Button_Title Авто на прокат
+                    a(href='/cathalog.html')
+                        .footer_middleContainer_Buttons_Button_Title(href='/cathalog.html') Коттетжи и усадьбы
+                    a(href='/cathalog.html')
+                        .footer_middleContainer_Buttons_Button_Title Бани и сауны
+                    a(href='/cathalog.html')
+                        .footer_middleContainer_Buttons_Button_Title Авто на прокат
 
                 .footer_middleContainer_Buttons_middleButtons
-                
-                    .footer_middleContainer_Buttons_Button_Title Квартиры
+                    a(href='/cathalog.html')
+                        .footer_middleContainer_Buttons_Button_Title Квартиры
                     .footer_middleContainer_Buttons_List
 
                         .footer_middleContainer_Buttons_ButtonList
-                            .footer_middleContainer_Buttons_Button Квартиры в Минске 
-                            .footer_middleContainer_Buttons_Button Квартиры в Гомеле
-                            .footer_middleContainer_Buttons_Button Квартиры в Бресте
+                            a(href='/cathalog.html')
+                                .footer_middleContainer_Buttons_Button Квартиры в Минске
+                            a(href='/cathalog.html') 
+                                .footer_middleContainer_Buttons_Button Квартиры в Гомеле
+                            a(href='/cathalog.html')
+                                .footer_middleContainer_Buttons_Button Квартиры в Бресте
 
                         .footer_middleContainer_Buttons_ButtonList
-                            .footer_middleContainer_Buttons_Button Квартиры в Витебске 
-                            .footer_middleContainer_Buttons_Button Квартиры в Гродно
-                            .footer_middleContainer_Buttons_Button Квартиры в Могилеве 
+                            a(href='/cathalog.html')
+                                .footer_middleContainer_Buttons_Button Квартиры в Витебске 
+                            a(href='/cathalog.html')
+                                .footer_middleContainer_Buttons_Button Квартиры в Гродно
+                            a(href='/cathalog.html')
+                                .footer_middleContainer_Buttons_Button Квартиры в Могилеве 
 
                 .footer_middleContainer_Buttons_rightButtons
                     .footer_middleContainer_Buttons_ButtonList
-                        .footer_middleContainer_Buttons_Button Новости
-                        .footer_middleContainer_Buttons_Button Размещение и тарифы 
-                        .footer_middleContainer_Buttons_Button Объявления на карте
-                        .footer_middleContainer_Buttons_Button Контакты 
+                        a(href='/newslist.html')
+                            .footer_middleContainer_Buttons_Button Новости
+                        a(href='/cathalog.html')
+                            .footer_middleContainer_Buttons_Button Размещение и тарифы 
+                        a(href='/cathalog.html')
+                            .footer_middleContainer_Buttons_Button Объявления на карте
+                        a(href='/contacts.html')
+                            .footer_middleContainer_Buttons_Button Контакты 
             .footer_middleContainer_Icons
                 .footer_middleContainer_Icons_Social
                     .footer_middleContainer_Icons_Social_Text Мы в соцсетях
                     .footer_middleContainer_Icons_Social_icons
-                        include ../../assets/images/igImg.svg
-                        include ../../assets/images/vkImg.svg
-                        include ../../assets/images/fbImg.svg
+                        .footer_middleContainer_Icons_Social_icons_icon(id= 'vk_icon' href="http://vk.com")
+                            a(href="http://vk.com") 
+                                include ../../assets/images/igImg.svg
+                        .footer_middleContainer_Icons_Social_icons_icon(id= 'vk_icon')
+                            a(href="http://vk.com") 
+                                include ../../assets/images/vkImg.svg 
+                        .footer_middleContainer_Icons_Social_icons_icon(id= 'vk_icon')
+                            a(href="http://vk.com") 
+                                include ../../assets/images/fbImg.svg
 
                 .footer_middleContainer_Icons_Card
-                    img(src='../../assets/images/visaImg.png')
-                    img(src='../../assets/images/webpayImg.png')
-                    img(src='../../assets/images/visaVfImg.png')
-                    img(src='../../assets/images/masterImg.png')
-                    img(src='../../assets/images/secureCodeImg.png')
-                    img(src='../../assets/images/belkartImg.png')
+                    .footer_middleContainer_Icons_Card_img
+                        img(src='../../assets/images/visaImg.png')
+                    .footer_middleContainer_Icons_Card_img    
+                        img(src='../../assets/images/webpayImg.png')
+                    .footer_middleContainer_Icons_Card_img
+                        img(src='../../assets/images/visaVfImg.png')
+                    .footer_middleContainer_Icons_Card_img
+                        img(src='../../assets/images/masterImg.png')
+                    .footer_middleContainer_Icons_Card_img
+                        img(src='../../assets/images/secureCodeImg.png')
+                    .footer_middleContainer_Icons_Card_img
+                        img(src='../../assets/images/belkartImg.png')
 
 
 
