--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -48,4 +48,4 @@ header#header
                 {text: 'Коттеджи и усадьбы ', cls: 'primary',id: 'housesPg', type:'w6', color: 'black', icon: '', gap: '15px', iconPlace:'right',link: 'cathalog.html'},
                 {text: 'Бани и Сауны', cls: 'primary', type:'w6',id: 'bathsPg', color: 'black', icon: '', gap: '15px', iconPlace:'right',link: 'cathalog.html'},
                 {text: 'Авто напрокат', cls: 'primary', type:'w6',id: 'carsPg', color: 'black', icon: '', gap: '15px', iconPlace:'right',link: 'cathalog.html'},] , 'middle_Bottom')
-            +stdBtn({text: '+ Разместить объявление', cls:'primary', color: 'purple', type: 'w7', gap: '5px', iconPlace: 'right'})
+            +stdBtn({text: '+ Разместить объявление', cls:'primary', color: 'purple', type: 'w7', gap: '5px', iconPlace: 'right', id: 'create_ad_button'})
