Header 1.1: changed margin to 20px

--- a/src/components/components.scss
+++ b/src/components/components.scss
@@ -1505,3 +1505,13 @@
         
     }
 }
+
+@media (max-width: 1439px) {
+    .content_container_searchBlockContainer {
+        width: 100%;
+        &_background {
+            width: calc(100% - 160px);
+
+        }
+    }
+}
